# seno

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: create-tag.yml  publish.yml
src/: main.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-ai.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  injector.rs  layout.rs  lib.rs  main.rs
src/styles/: main.css  settings.css
