[package]
name = "seno"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
